@@ -1,3 +1,8 @@
+2005-10-06  Per Bothner  <per@bothner.com>
+
+	* InlineCalls.java (walkApplyExp): Add missing setLine call.
+	* BindingInitializer.java (emit): Emit line number information.
+
 2005-09-26  Per Bothner  <per@bothner.com>
 
 	* Compilation.java (callContextVar): New field.
